fixed navigation clipping issue

--- a/src/App.css
+++ b/src/App.css
@@ -161,10 +161,6 @@
 
  }
 
- .vert-nav-link:active{
-  background-color: red;
-
- }
 
 @keyframes App-logo-spin {
   from {
